# xunfei2_test

./: .bashrc  .gitignore  README.md  before_params.txt  image_0007.ini  logs.txt  mapname.pgm
devel/: .catkin
devel/include/tensor_rt/: Messages.h  MessagesRequest.h  MessagesResponse.h  SimCarComm.h  SimCarCommRequest.h  SimCarCommResponse.h  msg_1.h  msg_2.h
devel/lib/pkgconfig/: gazebo_map.pc  gazebo_nav.pc  (+4 more)
src/: CMakeLists.txt
src/awake/: CMakeLists.txt  package.xml
src/broadcast/: CMakeLists.txt  package.xml
src/car_server/: CMakeLists.txt  package.xml
src/communication/: CMakeLists.txt  package.xml
src/control_test/: CMakeLists.txt  package.xml
src/cv_bridge/: CMakeLists.txt
src/detect_client/: CMakeLists.txt  package.xml
src/finnal/: CMakeLists.txt  package.xml
src/gazebo_map/: CMakeLists.txt  package.xml
src/gazebo_nav/: CMakeLists.txt  README.txt  package.xml
src/gazebo_pkg/: CMakeLists.txt
src/hdu_control/: CMakeLists.txt  mid.py  package.xml
src/laserscan/: CMakeLists.txt  package.xml
src/line_follow/: CMakeLists.txt  package.xml
src/map/: map2.yaml  map3.pgm  map3.yaml
src/mp3/: readme.md
src/my_planner/: CMakeLists.txt  my_planner_plugin.xml  package.xml
src/node_manager/: CMakeLists.txt  README  package.xml
src/opencv_test/: CMakeLists.txt  package.xml
src/pibot_bringup/: CMakeLists.txt  package.xml
src/qr/: CMakeLists.txt  package.xml
src/qr_01/: CMakeLists.txt  package.xml
src/qr_01/src/: aruco.cpp  aruco_sub.cpp
src/qr_01/srv/: qr_srv.srv
src/radio/: CMakeLists.txt  package.xml
src/ros_nanodet/: CMakeLists.txt  package.xml
src/run/: CMakeLists.txt  package.xml
src/run_test/: CMakeLists.txt  package.xml
src/send_goal_1/: CMakeLists.txt  package.xml
src/serial_port/: CMakeLists.txt  package.xml  readme .txt
src/simple_navigation_goals/: CMakeLists.txt  package.xml
src/tensor_rt/: CMakeLists.txt
src/ucar_controller/: CMakeLists.txt
src/ucar_map/: mid.py
src/ucar_nav/: teb_local_planner_params.yaml
src/wb_cpp/: CMakeLists.txt  setup.py  test.py  whitebalance.cpp
src/xf_mic/: CMakeLists.txt  package.xml
src/xf_mic_asr_offline/: CMakeLists.txt
src/xuntest/: CMakeLists.txt  package.xml
src/yolo/: package.xml
src/ztestnav2025/: CMakeLists.txt  README  package.xml
ypicture2/: dynamic_awb.py  take_image
(+808 files in other folders)
